--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <body style="margin: 0px;">
   <script type="module">
-    import init from './deadlock_sim.js'
+    import init from './out/deadlock_sim.js'
 
     init().catch((error) => {
       if (!error.message.startsWith("Using exceptions for control flow, don't mind me. This isn't actually an error!")) {
