--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         throw error;
       }
     });
+    <canvas id="mygame-canvas" width="1280" height="720"></canvas>
+
   </script>
 </body>
 
