--- a/index.html
+++ b/index.html
@@ -1,7 +1,19 @@
 <!doctype html>
 <html lang="en">
 
-<body style="margin: 0px;">
+<head>
+  <style>
+  canvas {    
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    width: 1280px;
+  }
+  </style>
+</head>
+<body style="margin: 0px;" style="background-color:DimGray">
   <script type="module">
     import init from './out/deadlock_sim.js'
 
