--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   </script>
 
-<canvas id="mygame-canvas" width="1280" height="720"></canvas>
+<!-- <canvas id="mygame-canvas" width="1280" height="720"></canvas> -->
 </body>
 
 </html>
